k8s/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: crm-saas
spec:
  selector:
    app: keycloak
  ports:
    - port: 8080
      targetPort: 8080
